--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <title>ENGINE GAME TEST</title>
   </head>
   <body>
-    <h1>HELLO WORLD!!!</h1>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./game/index.js"></script>
   </body>
 </html>
