--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>ENGINE GAME TEST</title>
   </head>
   <body>
-    <script type="module" src="./game/index.js"></script>
+    <script defer type="module" src="./game/index.js"></script>
   </body>
 </html>
